--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/geolocation": "^4.10.1",
+    "@ionic-native/http": "^4.19.0",
+    "@ionic-native/ibeacon": "^4.19.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "com.unarin.cordova.beacon": "~3.7.0",
+    "cordova-android": "7.1.4",
+    "cordova-plugin-advanced-http": "2.0.2",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ibeacon": "3.7.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -39,7 +45,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "^3.2.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -54,7 +60,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "com.unarin.cordova.beacon": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
