--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/ibeacon": "^4.19.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
+    "@ionic-native/text-to-speech": "^4.19.0",
     "@ionic/storage": "2.1.3",
     "com.unarin.cordova.beacon": "~3.7.0",
     "cordova-android": "7.1.4",
@@ -37,6 +38,7 @@
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-tts": "0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -62,7 +64,8 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "com.unarin.cordova.beacon": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-tts": {}
     },
     "platforms": [
       "android"
