--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic-native/text-to-speech": "^4.19.0",
     "@ionic/storage": "2.1.3",
-    "com.unarin.cordova.beacon": "~3.7.0",
+    "@types/jquery": "^3.3.29",
+    "com.unarin.cordova.beacon": "^3.7.0",
     "cordova-android": "7.1.4",
-    "cordova-plugin-advanced-http": "2.0.2",
+    "cordova-plugin-advanced-http": "^2.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -38,7 +39,7 @@
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-tts": "0.2.3",
+    "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
